# llm-wrapper-test

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  update.md  usage.md
app/: main.py
app/pages/: 01_Run_Benchmark.py  02_Results.py  03_Capability_Matrix.py  04_Logging_Checklist.py  05_Targets_Config.py  06_Raw_Events.py
bench/: __init__.py  adapters.py  capability_tests.py  config.py  db.py  export.py  http_client.py  logging_matrix.py  metrics.py  runner.py  schemas.py  utils.py  wrapper_registry.py
configs/: prompts.example.yaml  targets.example.yaml  test_profiles.example.yaml
scripts/: export_latest.py  init_db.py  run_cli_benchmark.py
services/: README.md  docker-compose.example.yml
services/bifrost/: run_bifrost_docker.sh  run_bifrost_npx.sh  test_bifrost.sh
services/helicone/: run_helicone_gateway_docker.sh  test_helicone_gateway.sh
services/litellm/: litellm_config.yaml  run_litellm.sh  test_litellm.sh
services/llm_gateway/: run_llm_gateway_docker.sh  test_llm_gateway.sh
services/portkey/: run_portkey_docker.sh  run_portkey_npx.sh  test_portkey.sh
tests/: test_config.py  test_metrics.py  test_schemas.py
