[project]
name = "llm-wrapper-bench"
version = "0.1.0"
description = "Streamlit benchmark app for comparing OpenAI-compatible LLM wrappers and gateways."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "plotly>=5.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
]
sdk = [
    "litellm>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
